[package]
name = "tempo-alloy"
description = "Tempo extensions of Alloy"

version = "1.9.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
tempo-contracts = { workspace = true, features = ["rpc"] }
tempo-primitives = { workspace = true, features = ["serde", "rpc"] }
tempo-chainspec = { workspace = true, default-features = false }
tempo-evm = { workspace = true, optional = true }
tempo-revm = { workspace = true, optional = true }

alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-provider.workspace = true
alloy-rpc-client = { workspace = true, features = ["reqwest"] }
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
alloy-json-rpc.workspace = true
alloy-transport.workspace = true

reth-evm = { workspace = true, optional = true }
reth-primitives-traits = { workspace = true, optional = true }
reth-rpc-convert = { workspace = true, optional = true }
reth-rpc-eth-types = { workspace = true, optional = true }

tower.workspace = true
dashmap.workspace = true
derive_more.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
http.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["providers", "reqwest", "rpc-client", "rpc-types-eth", "signers", "signer-local", "sol-types", "transport-http"] }
alloy-signer.workspace = true
eyre.workspace = true
serde_json.workspace = true
test-case.workspace = true
tokio.workspace = true

[features]
default = []
reth = [
    "dep:tempo-evm",
    "dep:tempo-revm",
    "dep:reth-evm",
    "dep:reth-primitives-traits",
    "dep:reth-rpc-convert",
    "dep:reth-rpc-eth-types",
    "tempo-primitives/reth",
    "tempo-chainspec/reth",
]
asm-keccak = [
    "alloy-primitives/asm-keccak",
    "alloy/asm-keccak",
]
