[package]
name = "tempo-bootnode"
description = "Internal bootnode with dynamic peer registration for Kubernetes deployments"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
const-hex.workspace = true
eyre.workspace = true
futures.workspace = true
parking_lot.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

reth-discv4 = { git = "https://github.com/paradigmxyz/reth", rev = "d76babb2f17773f79c9cf1eda497c539bd5cf553" }
reth-network-peers.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true

[features]
default = []
