[package]
name = "tempo-chainspec"
description = "TODO:"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-primitives = { workspace = true, features = ["reth"] }

reth-cli = { workspace = true, optional = true }
reth-chainspec.workspace = true
reth-network-peers.workspace = true

alloy-evm.workspace = true
alloy-genesis.workspace = true
once_cell.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-hardforks.workspace = true

eyre = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
paste.workspace = true

[dev-dependencies]

[features]
default = ["std", "serde", "cli"]
std = [
    "alloy-eips/std",
    "alloy-evm/std",
    "alloy-genesis/std",
    "alloy-primitives/std",
    "once_cell/std",
    "reth-chainspec/std",
    "reth-network-peers/std",
    "serde/std",
    "serde_json/std",
    "tempo-primitives/std",
]
serde = [
    "alloy-eips/serde",
    "alloy-hardforks/serde",
    "alloy-primitives/serde",
    "tempo-primitives/serde"
]
cli = ["std", "dep:reth-cli", "dep:eyre", "tempo-primitives/reth-codec"]
