[package]
name = "tempo-commonware-node-config"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
age.workspace = true
commonware-codec.workspace = true
commonware-cryptography.workspace = true
commonware-math.workspace = true
const-hex.workspace = true
rand_core.workspace = true
secrecy.workspace = true
thiserror.workspace = true

[dev-dependencies]
commonware-utils.workspace = true
rand_08.workspace = true
tempfile.workspace = true
