[package]
name = "tempo-consensus-args"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy-primitives.workspace = true
clap.workspace = true
jiff = { workspace = true, features = ["std"] }

[lints]
workspace = true
