[package]
name = "tempo-contracts"
description = "TODO:"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
alloy-contract = { workspace = true, optional = true }
alloy-primitives.workspace = true
alloy-sol-types = { workspace = true, features = ["json"] }

[features]
default = ["rpc"]
rpc = ["dep:alloy-contract"]
