[package]
name = "tempo-contracts"
description = "TODO:"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-precompiles-macros.workspace = true
alloy = { workspace = true, features = ["sol-types"] }
alloy-contract = { workspace = true, optional = true }
alloy-primitives.workspace = true
alloy-sol-types = { workspace = true, features = ["json"] }

[dev-dependencies]
alloy-provider = { workspace = true, features = ["reqwest", "reqwest-rustls-tls"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = ["rpc"]
rpc = ["dep:alloy-contract"]
# Enable precompile runtime support (generates interface traits in `#[abi]` modules).
precompile = []
