[package]
name = "tempo-dkg-onchain-artifacts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy-rlp.workspace = true
bytes.workspace = true
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-utils.workspace = true

[dev-dependencies]
rand.workspace = true

[lints]
workspace = true
