[package]
name = "tempo-evm"
description = "TODO:"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-chainspec = { workspace = true, features = ["reth"] }
tempo-contracts.workspace = true
tempo-payload-types = { workspace = true, optional = true }
tempo-primitives = { workspace = true, features = ["reth"] }
tempo-revm.workspace = true

commonware-cryptography.workspace = true
commonware-codec.workspace = true

reth-consensus.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-revm.workspace = true
reth-primitives-traits.workspace = true
reth-rpc-eth-api = { workspace = true, optional = true }

rayon = { workspace = true, optional = true }
alloy-rlp.workspace = true
alloy-evm.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

derive_more.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-eips.workspace = true
alloy-signer.workspace = true
alloy-signer-local = { workspace = true, features = ["mnemonic"] }
alloy-sol-types.workspace = true
criterion.workspace = true
revm.workspace = true
reth-storage-api.workspace = true
tempo-precompiles = { workspace = true, features = ["test-utils"] }
tempo-primitives = { workspace = true, features = ["arbitrary"] }

[features]
default = ["rpc", "engine"]
rpc = ["dep:reth-rpc-eth-api", "tempo-revm/rpc", "tempo-primitives/serde", "tempo-primitives/reth-codec"]
engine = ["dep:tempo-payload-types", "dep:rayon"]

[[bench]]
name = "tip20_execution"
harness = false
