[package]
name = "tempo-evm"
description = "TODO:"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-chainspec = { workspace = true, features = ["reth"] }
tempo-contracts.workspace = true
tempo-payload-types = { workspace = true, optional = true }
tempo-primitives = { workspace = true, features = ["reth"] }
tempo-revm.workspace = true

commonware-cryptography.workspace = true
commonware-codec.workspace = true

reth-consensus.workspace = true
reth-consensus-common.workspace = true
reth-chainspec.workspace = true
reth-ethereum-consensus.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-revm.workspace = true
reth-primitives-traits.workspace = true
reth-rpc-eth-api = { workspace = true, optional = true }

rayon = { workspace = true, optional = true }
alloy-consensus.workspace = true
alloy-evm = { workspace = true, features = ["std"] }
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-eth = { workspace = true, optional = true }

derive_more.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-eips.workspace = true
alloy-genesis = { workspace = true, features = ["std"] }
alloy-primitives = { workspace = true, features = ["asm-keccak", "keccak-cache-global"] }
alloy-signer.workspace = true
alloy-signer-local = { workspace = true, features = ["mnemonic"] }
alloy-sol-types.workspace = true
criterion.workspace = true
revm.workspace = true
reth-execution-cache.workspace = true
reth-storage-api.workspace = true
reth-trie.workspace = true
serde_json.workspace = true
tempo-precompiles = { workspace = true, features = ["test-utils"] }
tempo-primitives = { workspace = true, features = ["arbitrary"] }
tikv-jemallocator = "0.6.1"

[features]
default = ["rpc", "engine"]
rpc = ["dep:alloy-rpc-types-eth", "dep:reth-rpc-eth-api", "tempo-revm/rpc", "tempo-primitives/serde", "tempo-primitives/reth-codec"]
engine = ["dep:tempo-payload-types", "dep:rayon"]

[[bench]]
name = "tip20_execution"
harness = false
