[package]
name = "tempo-evm"
description = "TODO:"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-chainspec = { workspace = true, features = ["reth"] }
tempo-contracts.workspace = true
tempo-dkg-onchain-artifacts.workspace = true
tempo-payload-types = { workspace = true, optional = true }
tempo-precompiles.workspace = true
tempo-primitives = { workspace = true, features = ["reth"] }

commonware-cryptography.workspace = true
commonware-codec.workspace = true

reth-consensus.workspace = true
reth-consensus-common.workspace = true
reth-chainspec.workspace = true
reth-ethereum-consensus.workspace = true
reth-execution-types.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-primitives-traits.workspace = true
reth-rpc-eth-api = { workspace = true, optional = true }
reth-storage-api.workspace = true

rayon = { workspace = true, optional = true }
alloy-consensus.workspace = true
alloy-eip7928.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types-eth = { workspace = true, optional = true }
auto_impl.workspace = true
evm2 = { workspace = true, features = ["std"] }
evm2-macros.workspace = true

derive_more.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-eips.workspace = true
alloy-genesis = { workspace = true, features = ["std"] }
alloy-primitives = { workspace = true, features = ["asm-keccak", "keccak-cache-global"] }
alloy-signer-local = { workspace = true, features = ["mnemonic"] }
alloy-signer.workspace = true
alloy-sol-types.workspace = true
base64.workspace = true
commonware-consensus.workspace = true
commonware-math.workspace = true
commonware-utils.workspace = true
criterion.workspace = true
eyre.workspace = true
indexmap = { workspace = true, features = ["serde"] }
insta.workspace = true
p256 = { workspace = true, features = ["ecdsa"] }
proptest.workspace = true
rand_08.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempo-precompiles = { workspace = true, features = ["test-utils"] }
tempo-primitives = { workspace = true, features = ["arbitrary"] }
test-case.workspace = true
tikv-jemallocator = "0.6.1"

[features]
default = ["rpc", "engine"]
rpc = ["dep:alloy-rpc-types-eth", "dep:reth-rpc-eth-api", "tempo-primitives/serde", "tempo-primitives/reth-codec"]
engine = ["dep:tempo-payload-types", "dep:rayon"]

[[bench]]
name = "tip20_execution"
harness = false

[[bench]]
name = "dex_execution"
harness = false
