[package]
name = "tempo-execution-tests"
description = "Tempo EL regression testing"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "tempo-execution-tests"
path = "src/main.rs"

[dependencies]
tempo-contracts.workspace = true
tempo-evm.workspace = true
tempo-chainspec.workspace = true
tempo-precompiles = { workspace = true, features = ["test-utils"] }
tempo-primitives.workspace = true
tempo-revm.workspace = true

alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-evm.workspace = true

revm.workspace = true
reth-revm.workspace = true
reth-chainspec.workspace = true

clap.workspace = true
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
