[package]
name = "tempo-ext"
description = "Extension dispatch and management for the Tempo CLI"

version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
sha2.workspace = true
tempfile.workspace = true
