[package]
name = "tempo-ext"
description = "Extension dispatch and management for the Tempo CLI"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
dirs-next.workspace = true
semver.workspace = true
minisign-verify.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
minisign.workspace = true
