[package]
name = "tempo-faucet"
description = "Faucet RPC module for dispensing TIP20 tokens"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-precompiles = { workspace = true, features = ["rpc"] }
reth-rpc-server-types.workspace = true
tempo-alloy.workspace = true
alloy = { workspace = true, features = [
  "rpc-types",
  "signers",
  "signer-local",
  "signer-mnemonic-all-languages",
  "providers",
  "reqwest-rustls-tls", # TODO(mattsse): set this to just reqwest after https://github.com/alloy-rs/alloy/pull/2865
] }
async-trait.workspace = true
jsonrpsee.workspace = true
clap.workspace = true
