[package]
name = "tempo-fuzz-harness"
description = "Loadable transaction fuzzing harness for Tempo"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-sol-types.workspace = true
bincode = "1.3.3"
reth-primitives-traits.workspace = true
reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-evm.workspace = true
reth-trie-common.workspace = true
revm.workspace = true
serde.workspace = true
tempo-fuzz-types.workspace = true
tempo-chainspec.workspace = true
tempo-consensus.workspace = true
tempo-contracts.workspace = true
tempo-evm.workspace = true
tempo-precompiles.workspace = true
tempo-revm.workspace = true
tempo-primitives = { workspace = true, features = ["reth"] }
