[package]
name = "tempo-lthash"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
reth-chain-state.workspace = true
reth-db-api.workspace = true
reth-engine-tree.workspace = true
reth-errors.workspace = true
reth-evm.workspace = true
reth-execution-types.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-prune-types.workspace = true
reth-revm.workspace = true
reth-storage-api.workspace = true
reth-tasks.workspace = true
reth-trie.workspace = true

alloy-consensus.workspace = true
alloy-eip7928.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true

blake3.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
reth-db.workspace = true
tempfile.workspace = true

[features]
trie-debug = ["reth-engine-tree/trie-debug"]
