[package]
name = "monitor"
description = "Tempo monitor core and Reth adapter"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
store = ["dep:tracing", "dep:reth-db", "dep:reth-db-api", "dep:tokio"]
reth = [
    "store",
    "tempo-primitives/reth",
    "tempo-primitives/reth-codec",
    "dep:futures",
    "dep:reth-exex",
    "dep:reth-node-api",
    "dep:reth-primitives-traits",
    "dep:reth-storage-api",
    "dep:tokio",
]
activity = []

[dependencies]
alloy-consensus = { workspace = true, features = ["serde"] }
alloy-eips = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true, features = ["serde"] }
tempo-contracts = { workspace = true, default-features = false, features = ["serde"] }
tempo-hardfork = { workspace = true, features = ["serde"] }
tempo-primitives = { workspace = true, default-features = false, features = ["std", "serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures = { workspace = true, optional = true }
reth-db = { workspace = true, optional = true }
reth-db-api = { workspace = true, optional = true }
reth-exex = { workspace = true, optional = true }
reth-node-api = { workspace = true, optional = true }
reth-primitives-traits = { workspace = true, optional = true }
reth-storage-api = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
eyre.workspace = true
tempfile.workspace = true
