[package]
name = "tempo-native-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "bridge-sidecar"
path = "src/bin/sidecar.rs"

[dependencies]
# P2P
commonware-p2p.workspace = true

# Tempo
tempo-primitives.workspace = true

# Alloy
alloy = { workspace = true, default-features = false, features = [
    "network",
    "rpc",
    "rpc-types",
    "transports",
    "providers",
    "provider-http",
    "provider-ws",
    "reqwest-rustls-tls",
    "signers",
    "signer-local",
    "sol-types",
] }
alloy-primitives.workspace = true

# Commonware (BLS)
commonware-cryptography.workspace = true
commonware-codec.workspace = true
commonware-utils.workspace = true
commonware-math.workspace = true
commonware-parallel.workspace = true

# Direct blst access for EIP-2537 serialization and fuzz tests
blst = "0.3"

# Async
tokio.workspace = true
futures.workspace = true

# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
bincode = "1.3"

# Async trait
async-trait = "0.1"

# Utils
eyre.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
const-hex.workspace = true

[dev-dependencies]
hex = "0.4"
portpicker = "0.1"
proptest.workspace = true
rand.workspace = true
sha2.workspace = true
commonware-parallel.workspace = true

# For in-process Tempo node testing
tempo-node.workspace = true
tempo-chainspec.workspace = true
tempo-contracts.workspace = true
tempo-payload-types.workspace = true
tempo-precompiles.workspace = true
reth-e2e-test-utils.workspace = true
reth-ethereum = { workspace = true, features = ["node", "test-utils", "pool"] }
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-node-api.workspace = true
reth-rpc-builder.workspace = true
alloy-rpc-types-engine.workspace = true

[features]
p2p = []

[lints]
workspace = true
