[package]
name = "tempo-page-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["map"] }
blake3.workspace = true
reth-db.workspace = true
reth-db-api.workspace = true
reth-trie.workspace = true
reth-revm.workspace = true
serde.workspace = true
tempo-chainspec = { workspace = true, features = ["reth"] }
tempo-primitives = { workspace = true, features = ["reth-codec"] }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
rand.workspace = true
tempfile.workspace = true

[lints]
workspace = true
